package han.triptop.groepB3.model;

public record LoginDto(
        String username,
        String password
) {
}
