@startuml

' gekozen ontwerpvraag:
' Hoe zorg je ervoor dat je bij een wijziging in de datastructuur van een externe service niet de hele applicatie hoeft aan te passen?
' Dit is mijn initiele diagram voordat ik was begonnen met het maken van de prototype

class LoginDto {
    - username: String;
    - password: String;

    + username() : String;
    + password() : String;
}

class JsonObject <<External>> {
}

class JsonResponse {
    - json: String;

    + json() : String;
    + toJsonObject() : JsonObject
}

class LoginTokenDto {
    - token: String;

    + token() : String;
}

class AuthorisationController {
    - authorisationService : AuthorisationServiceFacade;

    + login(login: LoginDto) : ResponseEntity;
    + isLoggedIn() : ResponseEntity<Boolean>;
}

class AuthorisationServiceFacade {
    - client: IdentityProviderClient;

    + login(login: LoginDto) : LoginTokenDto;
    + isLoggedIn(token: LoginTokenDto) : boolean;
}

class IdentityProviderClient {
    + login(login: LoginDto) : JsonResponse;
    + isLoggedIn(token: LoginTokenDto) : JsonResponse;
}

AuthorisationController --> AuthorisationServiceFacade
AuthorisationServiceFacade --> IdentityProviderClient

AuthorisationController --> LoginDto
AuthorisationServiceFacade --> LoginTokenDto
IdentityProviderClient --> JsonResponse

JsonResponse --> JsonObject

@enduml